# bili-album

./: .gitignore  README.md  pyproject.toml  requirements.txt
album/: __main__.py  album.py  constants.py  db.py  parser.py  request.py  utils.py
bili_album/: __init__.py  __main__.py  api.py  cli.py  common.py  constants.py  core.py  core_db.py  core_img.py  db.py  log.py  parser.py  request.py  rest.py  test_db.py  test_parser.py  utils.py
bili_album/core/: __init__.py  common.py  core_db.py  core_img.py  test_utils.py  utils.py
bili_album/db/: __init__.py  core.py  model.py  utils.py
doc/: TODO.md
src/bili_album/: cli.py  common.py  core.py  core_db.py  db.py  log.py  parser.py  rest.py  test_db.py  utils.py
tests/: test_db.py  test_parser.py
