[tool.poetry]
name = "bili-album"
version = "0.2.3"
description = ""
authors = ["Jason Swift <anemele@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fake-useragent = "^1.3.0"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
sqlalchemy = "^2.0.23"
click = "^8.1.7"
mashumaro = { extras = ["orjson", "toml"], version = "^3.13.1" }


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[tool.poetry.scripts]
bili-album = "bili_album.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
