[project]
name = "bili-album"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Jason Swift", email = "anemele@outlook.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.11",
    "fake-useragent>=2.0.3",
    "mashumaro[orjson,toml]>=3.15",
    "requests>=2.32.3",
]

[project.scripts]
bili-album = "bili_album.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py312"
lint.extend-select = ["I", "F403", "F401"]
